[project]
name = "leadfinder"
version = "0.1.0"
description = "Find local businesses without websites, for web-development lead generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nova" }]
keywords = ["leads", "google-places", "sales", "web-development", "prospecting"]

dependencies = [
    "google-maps-places>=0.1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pandas>=2.1",
    "duckdb>=1.5.4",
]

[project.scripts]
leadfinder = "leadfinder.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leadfinder"]
artifacts = ["src/leadfinder/assets/*"]  # vendored Leaflet (third-party)

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear,
# RUF incl. ambiguous-unicode checks that catch stray em-dashes / lookalikes.
select = ["E", "W", "F", "I", "UP", "B", "RUF"]

[tool.ruff.lint.per-file-ignores]
# These modules hold long embedded CSS/JS template constants.
"src/leadfinder/analytics.py" = ["E501"]
"src/leadfinder/webui.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
